fix: deprecation of library import.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "df0a6a37-1d43-466c-ae17-ccf14a266f35",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_75552/4030073604.py:11: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_42179/12027983.py:9: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  soup = BeautifulSoup(text, \"html.parser\")\n",
-      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_75552/4030073604.py:11: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_42179/12027983.py:9: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  soup = BeautifulSoup(text, \"html.parser\")\n"
      ]
     },
@@ -31,18 +31,14 @@
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# Define a whitelist of French characters\n",
     "french_chars = \"àâäçéèêëîïôùûüÿÀÂÄÇÉÈÊËÎÏÔÙÛÜŸ.:-/+’',\"\n",
     "\n",
     "def remove_html_tags(text):\n",
-    "    # Remove HTML tags using BeautifulSoup\n",
     "    soup = BeautifulSoup(text, \"html.parser\")\n",
     "    return soup.get_text(separator=\" \")\n",
     "\n",
     "def find_and_replace_ambiguous_unicode(text, replacement=\"\"):\n",
-    "    # Remove newline characters\n",
     "    text = text.replace('\\n', ' ').replace('\\t', ' ')\n",
-    "    # Regex pattern to match characters that are not in the ASCII range and not in the French whitelist\n",
     "    non_ascii_pattern = re.compile(r'[^a-zA-Z0-9\\s' + re.escape(french_chars) + r']')\n",
     "    return non_ascii_pattern.sub(replacement, text)\n",
     "\n",
@@ -75,42 +71,30 @@
     "\n",
     "\n",
     "def convert_and_clean_excel(input_file_path, output_file_path, formatted_output_file_path):\n",
-    "    # Load the Excel file\n",
     "    df = pd.read_excel(input_file_path)\n",
-    "\n",
-    "    # Convert the DataFrame to a dictionary\n",
     "    data = df.to_dict(orient='records')\n",
-    "\n",
-    "    # Clean the data to remove HTML tags, newlines, and ambiguous Unicode characters except French characters\n",
     "    cleaned_data = clean_data(data)\n",
     "\n",
-    "    # Save the cleaned data to a JSON file\n",
     "    with open(output_file_path, 'w', encoding='utf-8') as json_file:\n",
     "        json.dump(cleaned_data, json_file, ensure_ascii=False, indent=2)\n",
     "\n",
     "    print(f\"Excel file has been cleaned and saved to {output_file_path}\")\n",
-    "\n",
-    "    # Format the events\n",
     "    formatted_events = format_events_for_prompt(cleaned_data)\n",
     "\n",
-    "    # Save the formatted events to a new JSON file\n",
     "    with open(formatted_output_file_path, 'w', encoding='utf-8') as json_file:\n",
     "        json.dump(formatted_events, json_file, ensure_ascii=False, indent=2)\n",
     "\n",
     "    print(f\"Formatted events have been saved to {formatted_output_file_path}\")\n",
     "\n",
-    "# File paths\n",
     "input_file_path = 'data/que-faire-a-paris-2.xlsx'\n",
     "cleaned_output_file_path = 'data/cleaned_xlsx_data.json'\n",
     "formatted_output_file_path = 'data/formatted_xls_events.json'\n",
-    "\n",
-    "# Convert, clean, and format the Excel file\n",
     "convert_and_clean_excel(input_file_path, cleaned_output_file_path, formatted_output_file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "cd7e0226-864d-43cf-843d-2adf0c6067f1",
    "metadata": {},
    "outputs": [],
@@ -128,86 +112,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "769b4de5-f1bd-4eb8-807b-0ade4f06db02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import configuration\n",
     "load_dotenv()\n",
-    "\n",
     "llm = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "772024f4-64d3-4faa-9874-41cf1114c84d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: on\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:5002\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      " * Restarting with stat\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel_launcher.py\", line 18, in <module>\n",
-      "    app.launch_new_instance()\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/traitlets/config/application.py\", line 1074, in launch_instance\n",
-      "    app.initialize(argv)\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/traitlets/config/application.py\", line 118, in inner\n",
-      "    return method(app, *args, **kwargs)\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 692, in initialize\n",
-      "    self.init_sockets()\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 331, in init_sockets\n",
-      "    self.shell_port = self._bind_socket(self.shell_socket, self.shell_port)\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 253, in _bind_socket\n",
-      "    return self._try_bind_socket(s, port)\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/ipykernel/kernelapp.py\", line 229, in _try_bind_socket\n",
-      "    s.bind(\"tcp://%s:%i\" % (self.ip, port))\n",
-      "  File \"/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/zmq/sugar/socket.py\", line 311, in bind\n",
-      "    super().bind(addr)\n",
-      "  File \"_zmq.py\", line 898, in zmq.backend.cython._zmq.Socket.bind\n",
-      "  File \"_zmq.py\", line 160, in zmq.backend.cython._zmq._check_rc\n",
-      "zmq.error.ZMQError: Address already in use (addr='tcp://127.0.0.1:54663')\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3558: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Suggested Event: \n",
+      "    ID: 56259, Title: Paris Sportives : activités football et marche sportive par LES ENFANTS DE LA GOUTTE D'OR, Date: 2024-01-01T00:00:00+00:00 to 2024-12-31T23:59:59+00:00, Location: Square Léon, 20 Rue des Gardes, 75018, Paris\n"
      ]
     }
    ],
    "source": [
-    "# Function to clean HTML tags from text\n",
     "def clean_html_tags(text):\n",
     "    clean = re.compile('<.*?>')\n",
     "    return re.sub(clean, ' ', text) if isinstance(text, str) else text\n",
     "\n",
-    "# Function to prefilter events based on the query\n",
     "def prefilter_events(events, query):\n",
     "    query_lower = query.lower()\n",
     "    filtered_events = [\n",
@@ -216,9 +166,8 @@
     "        or any(keyword.lower() in query_lower for keyword in event.get('Titre', '').split())\n",
     "        or any(keyword.lower() in query_lower for keyword in event.get('Description', '').split())\n",
     "    ]\n",
-    "    return filtered_events if filtered_events else events  # return all if no events match prefiltering\n",
+    "    return filtered_events if filtered_events else events \n",
     "\n",
-    "# Function to preprocess events and create a TF-IDF matrix\n",
     "def preprocess_events(events):\n",
     "    for event in events:\n",
     "        event['combined_text'] = f\"{event['Titre']} {event['Description']} {event.get('Mots clés', '')}\"\n",
@@ -228,14 +177,12 @@
     "    tfidf_matrix = vectorizer.fit_transform(texts)\n",
     "    return vectorizer, tfidf_matrix, events\n",
     "\n",
-    "# Function to get top N relevant events based on query\n",
     "def get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n=20):\n",
     "    query_vec = vectorizer.transform([query])\n",
     "    cosine_similarities = cosine_similarity(query_vec, tfidf_matrix).flatten()\n",
     "    relevant_indices = cosine_similarities.argsort()[-top_n:][::-1]\n",
     "    return [events[idx] for idx in relevant_indices]\n",
     "\n",
-    "# Function to generate a user-friendly prompt with the suggested events\n",
     "def generate_prompt(query, suggested_events):\n",
     "    events_text = \"\\n\".join([\n",
     "        f\"ID: {event['ID']}, Title: {event['Titre']}, Date: {event['Date de début']} to {event['Date de fin']}, Location: {event['Nom du lieu']}, {event['Adresse du lieu']}, {event['Code postal']}, {event['Ville']}\"\n",
@@ -253,41 +200,35 @@
     "    \"\"\"\n",
     "    return prompt\n",
     "\n",
-    "# Find the best matching event\n",
     "def find_event(query, events, vectorizer, tfidf_matrix, top_n=20):\n",
     "    relevant_events = get_top_relevant_events(query, vectorizer, tfidf_matrix, events, top_n)\n",
     "    prompt = generate_prompt(query, relevant_events)\n",
     "    \n",
     "    # Use LangChain to generate the response\n",
     "    prompt_template = PromptTemplate(input_variables=[\"prompt\"], template=\"{prompt}\")\n",
-    "    sequence = RunnableSequence([prompt_template, llm])\n",
-    "    response = sequence.invoke({\"prompt\": prompt})  # Updated method\n",
+    "    formatted_prompt = prompt_template.format(prompt=prompt)\n",
+    "    response = llm(formatted_prompt)\n",
     "    \n",
     "    return response, relevant_events\n",
     "\n",
-    "# Load formatted events from the JSON file\n",
     "def load_formatted_events(file_path):\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        return json.load(file)\n",
     "\n",
-    "# Save filtered events to a JSON file\n",
     "def save_filtered_events(filtered_events, file_path):\n",
     "    with open(file_path, 'w', encoding='utf-8') as file:\n",
     "        json.dump(filtered_events, file, ensure_ascii=False, indent=2)\n",
     "\n",
-    "# Main function to find relevant events based on user query and generate a prompt\n",
     "def find_and_generate_prompt(user_query, events, top_n=20):\n",
     "    filtered_events = prefilter_events(events, user_query)\n",
     "    vectorizer, tfidf_matrix, processed_events = preprocess_events(filtered_events)\n",
     "    suggested_event, relevant_events = find_event(user_query, processed_events, vectorizer, tfidf_matrix, top_n)\n",
     "    \n",
-    "    # Save the filtered events\n",
     "    save_filtered_events(relevant_events, 'filtered_events.json')\n",
     "    \n",
     "    return suggested_event\n",
     "\n",
-    "# Load events\n",
-    "formatted_events_file_path = 'data/formatted_xlsx_events.json'\n",
+    "formatted_events_file_path = 'data/formatted_xls_events.json'\n",
     "formatted_events = load_formatted_events(formatted_events_file_path)\n",
     "\n",
     "# Example usage\n",
@@ -298,10 +239,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "34f8a800-b8df-48d1-9f57-e3d08ec706b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Optional: Integrate with a Flask application for deployment\n",
     "\n",
@@ -318,6 +277,14 @@
     "if __name__ == '__main__':\n",
     "    app.run(port=5000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0207ad98-a51e-49ed-8198-f8391bfd6450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -336,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
