fix: reorganized audience types, as well as keywords for better integration into website, as well as minor change to protected chars.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "df0a6a37-1d43-466c-ae17-ccf14a266f35",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_42179/12027983.py:9: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_11734/2601293526.py:11: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  soup = BeautifulSoup(text, \"html.parser\")\n",
-      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_42179/12027983.py:9: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "/var/folders/7v/6mwzjf_55kb74qwkksjnfy780000gn/T/ipykernel_11734/2601293526.py:11: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  soup = BeautifulSoup(text, \"html.parser\")\n"
      ]
     },
@@ -20,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Excel file has been cleaned and saved to data/cleaned_xlsx_data.json\n",
-      "Formatted events have been saved to data/formatted_xls_events.json\n"
+      "Excel file has been cleaned and saved to DateGeniusAI/data/cleaned_xlsx_data.json\n",
+      "Formatted events have been saved to DateGeniusAI/data/formatted_xls_events.json\n"
      ]
     }
    ],
@@ -30,8 +30,10 @@
     "import json\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
+    "import os\n",
+    "from datetime import datetime\n",
     "\n",
-    "french_chars = \"àâäçéèêëîïôùûüÿÀÂÄÇÉÈÊËÎÏÔÙÛÜŸ.:-/+’',\"\n",
+    "french_chars = \"@àâäçéèêëîïôùûüÿÀÂÄÇÉÈÊËÎÏÔÙÛÜŸ.:-/+’',\"\n",
     "\n",
     "def remove_html_tags(text):\n",
     "    soup = BeautifulSoup(text, \"html.parser\")\n",
@@ -49,52 +51,262 @@
     "        cleaned_data.append(cleaned_item)\n",
     "    return cleaned_data\n",
     "\n",
+    "def is_valid_date(date_str):\n",
+    "    try:\n",
+    "        # Try to parse the date string\n",
+    "        datetime.strptime(date_str, \"%Y-%m-%dT%H:%M:%S%z\")\n",
+    "        return True\n",
+    "    except (ValueError, TypeError):\n",
+    "        return False\n",
+    "\n",
+    "def parse_audience(audience_str):\n",
+    "    # Define categories of audience types\n",
+    "    audience_types = [\"tout-petits\", \"enfants\", \"jeunes\", \"adultes\", \"Tout public\"]\n",
+    "    \n",
+    "    # Initialize the parsed audience\n",
+    "    parsed_audience = {}\n",
+    "    \n",
+    "    # Check if audience_str is empty or None\n",
+    "    if not audience_str:\n",
+    "        parsed_audience[\"types\"] = [\"nan\"]\n",
+    "    else:\n",
+    "        # Parse audience types\n",
+    "        parsed_audience[\"types\"] = [audience_type for audience_type in audience_types if audience_type in audience_str]\n",
+    "\n",
+    "        # Extract the starting age\n",
+    "        start_age_match = re.search(r\"A partir de (\\d+) ans\", audience_str)\n",
+    "        end_age_match = re.search(r\"Jusqu'à (\\d+) ans\", audience_str)\n",
+    "\n",
+    "        if start_age_match or end_age_match:\n",
+    "            parsed_audience[\"age_range\"] = {}\n",
+    "\n",
+    "            if start_age_match:\n",
+    "                parsed_audience[\"age_range\"][\"from\"] = int(start_age_match.group(1))\n",
+    "\n",
+    "            if end_age_match:\n",
+    "                parsed_audience[\"age_range\"][\"to\"] = int(end_age_match.group(1))\n",
+    "\n",
+    "    return parsed_audience\n",
+    "\n",
     "def format_events_for_prompt(events):\n",
-    "    formatted_events = [\n",
-    "        {\n",
+    "    formatted_events = []\n",
+    "    for event in events:\n",
+    "        # Extract date strings\n",
+    "        start_time_str = event.get('Date de début', '')\n",
+    "        end_time_str = event.get('Date de fin', '')\n",
+    "\n",
+    "        # Convert to Unix timestamps only if the date is valid\n",
+    "        start_time = int(datetime.strptime(start_time_str, \"%Y-%m-%dT%H:%M:%S%z\").timestamp() * 1000) if is_valid_date(start_time_str) else None\n",
+    "        end_time = int(datetime.strptime(end_time_str, \"%Y-%m-%dT%H:%M:%S%z\").timestamp() * 1000) if is_valid_date(end_time_str) else None\n",
+    "\n",
+    "        formatted_event = {\n",
     "            \"ID\": event.get('ID', ''),\n",
     "            \"URL\": event.get('URL', ''),\n",
     "            \"Titre\": event.get('Titre', ''),\n",
     "            \"Description\": event.get('Description', ''),\n",
-    "            \"Date de début\": event.get('Date de début', ''),\n",
-    "            \"Date de fin\": event.get('Date de fin', ''),\n",
+    "            \"Date de début\": start_time,  # Converted timestamp or None\n",
+    "            \"Date de fin\": end_time,  # Converted timestamp or None\n",
     "            \"Nom du lieu\": event.get('Nom du lieu', ''),\n",
     "            \"Adresse du lieu\": event.get('Adresse du lieu', ''),\n",
     "            \"Code postal\": event.get('Code postal', ''),\n",
-    "            \"Mots clés\": event.get('Mots clés', ''),\n",
+    "            \"Mots clés\": [keyword.strip() for keyword in event.get('Mots clés', '').split(',') if keyword.strip()],\n",
+    "            \"Audience\": parse_audience(event.get('audience', '')),\n",
     "            \"Ville\": event.get('Ville', ''),\n",
     "            \"Coordonnées géographiques\": event.get('Coordonnées géographiques', ''),\n",
+    "            \"Type de prix\": event.get('Type de prix', '')\n",
     "        }\n",
-    "        for event in events\n",
-    "    ]\n",
+    "        formatted_events.append(formatted_event)\n",
     "    return formatted_events\n",
     "\n",
     "\n",
     "def convert_and_clean_excel(input_file_path, output_file_path, formatted_output_file_path):\n",
-    "    df = pd.read_excel(input_file_path)\n",
-    "    data = df.to_dict(orient='records')\n",
-    "    cleaned_data = clean_data(data)\n",
+    "    try:\n",
+    "        df = pd.read_excel(input_file_path)\n",
+    "        data = df.to_dict(orient='records')\n",
+    "        cleaned_data = clean_data(data)\n",
     "\n",
-    "    with open(output_file_path, 'w', encoding='utf-8') as json_file:\n",
-    "        json.dump(cleaned_data, json_file, ensure_ascii=False, indent=2)\n",
+    "        with open(output_file_path, 'w', encoding='utf-8') as json_file:\n",
+    "            json.dump(cleaned_data, json_file, ensure_ascii=False, indent=2)\n",
     "\n",
-    "    print(f\"Excel file has been cleaned and saved to {output_file_path}\")\n",
-    "    formatted_events = format_events_for_prompt(cleaned_data)\n",
+    "        print(f\"Excel file has been cleaned and saved to {output_file_path}\")\n",
+    "        formatted_events = format_events_for_prompt(cleaned_data)\n",
     "\n",
-    "    with open(formatted_output_file_path, 'w', encoding='utf-8') as json_file:\n",
-    "        json.dump(formatted_events, json_file, ensure_ascii=False, indent=2)\n",
+    "        with open(formatted_output_file_path, 'w', encoding='utf-8') as json_file:\n",
+    "            json.dump(formatted_events, json_file, ensure_ascii=False, indent=2)\n",
     "\n",
-    "    print(f\"Formatted events have been saved to {formatted_output_file_path}\")\n",
+    "        print(f\"Formatted events have been saved to {formatted_output_file_path}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The file '{input_file_path}' was not found. Please check the file path and try again.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {str(e)}\")\n",
     "\n",
-    "input_file_path = 'data/que-faire-a-paris-2.xlsx'\n",
-    "cleaned_output_file_path = 'data/cleaned_xlsx_data.json'\n",
-    "formatted_output_file_path = 'data/formatted_xls_events.json'\n",
+    "# Update the file paths\n",
+    "input_file_path = os.path.join('DateGeniusAI', 'data', 'que-faire-a-paris-2.xlsx')\n",
+    "cleaned_output_file_path = os.path.join('DateGeniusAI', 'data', 'cleaned_xlsx_data.json')\n",
+    "formatted_output_file_path = os.path.join('DateGeniusAI', 'data', 'formatted_xls_events.json')\n",
+    "\n",
     "convert_and_clean_excel(input_file_path, cleaned_output_file_path, formatted_output_file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
+   "id": "23193818-7a39-41f8-9f41-5bd6e3e671ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed events have been saved to DateGeniusAI/data/cleaned_xlsx_data.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Function to process \"Mots clés\" and ensure it's an array of strings\n",
+    "def process_mots_cles(events):\n",
+    "    for event in events:\n",
+    "        # If \"Mots clés\" exists and is a string, convert it to an array of strings\n",
+    "        if isinstance(event.get('Mots clés'), str):\n",
+    "            event['Mots clés'] = [keyword.strip() for keyword in event['Mots clés'].split(',') if keyword.strip()]\n",
+    "            event['audience'] = parse_audience(event.get('audience', '')),\n",
+    "    return events\n",
+    "\n",
+    "def create_new_json_with_processed_mots_cles(input_json_file, output_json_file):\n",
+    "    try:\n",
+    "        # Load the existing formatted_xls_events.json\n",
+    "        with open(input_json_file, 'r', encoding='utf-8') as json_file:\n",
+    "            formatted_events = json.load(json_file)\n",
+    "        \n",
+    "        # Process \"Mots clés\" field\n",
+    "        processed_events = process_mots_cles(formatted_events)\n",
+    "        \n",
+    "        # Save the new file with the processed \"Mots clés\" field\n",
+    "        with open(output_json_file, 'w', encoding='utf-8') as json_file:\n",
+    "            json.dump(processed_events, json_file, ensure_ascii=False, indent=2)\n",
+    "        \n",
+    "        print(f\"Processed events have been saved to {output_json_file}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The file '{input_json_file}' was not found. Please check the file path and try again.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {str(e)}\")\n",
+    "\n",
+    "# File paths for input and output JSON files\n",
+    "input_json_file = os.path.join('DateGeniusAI', 'data', 'cleaned_xlsx_data.json')\n",
+    "output_json_file = os.path.join('DateGeniusAI', 'data', 'cleaned_xlsx_data.json')\n",
+    "\n",
+    "# Run the function to process the \"Mots clés\" field and save to a new JSON file\n",
+    "create_new_json_with_processed_mots_cles(input_json_file, output_json_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "16652293-8363-460e-a553-a07e06dd418b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique keywords have been saved to DateGeniusAI/data/unique_keywords.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Load the formatted events from the saved JSON file (formatted_xls_events.json)\n",
+    "formatted_output_file_path = os.path.join('DateGeniusAI', 'data', 'formatted_xls_events.json')\n",
+    "\n",
+    "with open(formatted_output_file_path, 'r', encoding='utf-8') as json_file:\n",
+    "    formatted_events = json.load(json_file)\n",
+    "\n",
+    "# Function to extract and save unique keywords\n",
+    "def extract_and_save_keywords(formatted_events, keywords_output_file_path):\n",
+    "    # Create a set to store unique keywords\n",
+    "    unique_keywords = set()\n",
+    "\n",
+    "    # Loop through each event and extract the keywords\n",
+    "    for event in formatted_events:\n",
+    "        keywords = event.get('Mots clés', [])\n",
+    "        for keyword in keywords:\n",
+    "            unique_keywords.add(keyword.strip())  # Add each keyword to the set, ensuring it's unique\n",
+    "\n",
+    "    # Convert the set to a list to make it JSON serializable\n",
+    "    unique_keywords_list = list(unique_keywords)\n",
+    "\n",
+    "    # Save the unique keywords to a separate JSON file\n",
+    "    with open(keywords_output_file_path, 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(unique_keywords_list, json_file, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"Unique keywords have been saved to {keywords_output_file_path}\")\n",
+    "\n",
+    "# Path where the unique keywords JSON will be saved\n",
+    "keywords_output_file_path = os.path.join('DateGeniusAI', 'data', 'unique_keywords.json')\n",
+    "\n",
+    "# Call the function to extract and save keywords from formatted_events\n",
+    "extract_and_save_keywords(formatted_events, keywords_output_file_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "08c31ce7-025d-4aa5-8659-347a0f067e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique audience strings have been saved to DateGeniusAI/data/unique_audience.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "# Load the formatted events from the saved JSON file (formatted_xls_events.json)\n",
+    "formatted_output_file_path = os.path.join('DateGeniusAI', 'data', 'cleaned_xlsx_data.json')\n",
+    "\n",
+    "with open(formatted_output_file_path, 'r', encoding='utf-8') as json_file:\n",
+    "    formatted_events = json.load(json_file)\n",
+    "\n",
+    "# Function to extract and save unique audience strings\n",
+    "def extract_and_save_audience(formatted_events, audience_output_file_path):\n",
+    "    # Create a set to store unique audience strings\n",
+    "    unique_audience = set()\n",
+    "\n",
+    "    # Loop through each event and extract the audience\n",
+    "    for event in formatted_events:\n",
+    "        audience = event.get('audience', '')  # Assuming 'Audience' is the key for audience string\n",
+    "        if audience:\n",
+    "            unique_audience.add(audience.strip())  # Add audience string to the set, ensuring it's unique\n",
+    "\n",
+    "    # Convert the set to a list to make it JSON serializable\n",
+    "    unique_audience_list = list(unique_audience)\n",
+    "\n",
+    "    # Save the unique audience strings to a separate JSON file\n",
+    "    with open(audience_output_file_path, 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(unique_audience_list, json_file, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    print(f\"Unique audience strings have been saved to {audience_output_file_path}\")\n",
+    "\n",
+    "# Path where the unique audience strings JSON will be saved\n",
+    "audience_output_file_path = os.path.join('DateGeniusAI', 'data', 'unique_audience.json')\n",
+    "\n",
+    "# Call the function to extract and save audience from formatted_events\n",
+    "extract_and_save_audience(formatted_events, audience_output_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "cd7e0226-864d-43cf-843d-2adf0c6067f1",
    "metadata": {},
    "outputs": [],
@@ -106,25 +318,16 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from langchain.chains import LLMChain\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import OpenAI\n",
+    "from langchain_openai import OpenAI\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "769b4de5-f1bd-4eb8-807b-0ade4f06db02",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv()\n",
     "llm = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
@@ -132,24 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "772024f4-64d3-4faa-9874-41cf1114c84d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthonybellon/Comp_Documents/Personal Projects/DateGeniusAi/DateGeniusAI/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Suggested Event: \n",
-      "    ID: 56259, Title: Paris Sportives : activités football et marche sportive par LES ENFANTS DE LA GOUTTE D'OR, Date: 2024-01-01T00:00:00+00:00 to 2024-12-31T23:59:59+00:00, Location: Square Léon, 20 Rue des Gardes, 75018, Paris\n"
+      "    ID: 56259, Title: Paris Sportives : activités football et marche sportive par LES ENFANTS DE LA GOUTTE D'OR, Date: 2024-01-01T00:00:00+00:00 to 2024-12-31T23:59:59+00:00, Location: Square Léon, 20 Rue des Gardes, 75018, Paris\n"
      ]
     }
    ],
